Added font weight helper classes

--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -10,3 +10,10 @@
 html {
   font-family: "GE Inspira Sans", sans-serif;
 }
+
+/**
+ * Font weights
+ */
+.weight--light      { font-weight:300!important; }
+.weight--normal     { font-weight:400!important; }
+.weight--semibold   { font-weight:600!important; }
