--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -6,14 +6,14 @@
 @include font-face('GE Inspira Serif', '/type/GEInspiraSerif-Italic-v01', normal, italic);
 @include font-face('GE Inspira Serif', '/type/GEInspiraSerif-Bold-v01', bold, normal);
 @include font-face('GE Inspira Serif', '/type/GEInspiraSerif-BoldItalic-v01', bold, italic);
+@include font-face('GE Inspira', '/type/GEInspMd');
+@include font-face('GE Inspira', '/type/GEInspMdIt', normal, italic);
+@include font-face('GE Inspira', '/type/GEInspBd', bold, normal);
+@include font-face('GE Inspira', '/type/GEInspBI', bold, italic);
 
 html {
   font-family: "GE Inspira Sans", sans-serif;
   color: $gray-dark;
-}
-
-h2, h3 {
-  color: $black;
 }
 
 .status {
