--- a/sass/_base.typography.scss
+++ b/sass/_base.typography.scss
@@ -1,40 +1,7 @@
-@import "lib/inuit-defaults/settings.defaults";
-@import "lib/px-colors/sass/settings.colors";
-@import "lib/px-mixins/sass/tools.mixins";
+/*------------------------------------*\
+    $PX-TYPOGRAPHY
+\*------------------------------------*/
 
-@if import-once('base.typography') {
-
-  @include font-face('GE Inspira Sans', '/type/GEInspiraSans-Regular-v01');
-  @include font-face('GE Inspira Sans', '/type/GEInspiraSans-Italic-v01', normal, italic);
-  @include font-face('GE Inspira Sans', '/type/GEInspiraSans-Bold-v01', bold, normal);
-  @include font-face('GE Inspira Sans', '/type/GEInspiraSans-BoldItalic-v01', bold, italic);
-  @include font-face('GE Inspira Serif', '/type/GEInspiraSerif-Regular-v01');
-  @include font-face('GE Inspira Serif', '/type/GEInspiraSerif-Italic-v01', normal, italic);
-  @include font-face('GE Inspira Serif', '/type/GEInspiraSerif-Bold-v01', bold, normal);
-  @include font-face('GE Inspira Serif', '/type/GEInspiraSerif-BoldItalic-v01', bold, italic);
-  @include font-face('GE Inspira', '/type/GEInspMd');
-  @include font-face('GE Inspira', '/type/GEInspMdIt', normal, italic);
-  @include font-face('GE Inspira', '/type/GEInspBd', bold, normal);
-  @include font-face('GE Inspira', '/type/GEInspBI', bold, italic);
-  
-  html {
-    font-family: "GE Inspira Sans", sans-serif;
-    color: $gray-dark;
-  }
-  
-  /**
-   * Font weights
-   */
-  .weight--light {
-    font-weight: 300!important;
-  }
-  
-  .weight--normal {
-    font-weight: 400!important;
-  }
-  
-  .weight--semibold {
-    font-weight: 600!important;
-  }
-
-}
+/**
+ * Base typographic styles for Predix Experience
+ */
