--- a/sass/_base.typography.scss
+++ b/sass/_base.typography.scss
@@ -1,5 +1,5 @@
 /*------------------------------------*\
-    $PX-TYPOGRAPHY
+    $PX-TYPOGRAPHY-DESIGN
 \*------------------------------------*/
 
 /**
