--- a/sass/_base.typography.scss
+++ b/sass/_base.typography.scss
@@ -5,3 +5,7 @@
 /**
  * Base typographic styles for Predix Experience
  */
+ 
+@import "px-functions-design/sass/tools.functions";
+
+@if import-once('base.typography') {}
