Added global font-size for small

--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -49,5 +49,9 @@ $predix-font-family: "GE Inspira Sans", sans-serif !default;
   .weight--semibold {
     font-weight: 600!important;
   }
+  
+  small {
+    @include inuit-font-size(12px);
+  }
 
 }
