--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -1,16 +1,15 @@
-/*------------------------------------*\
-    $PX-TYPOGRAPHY-DESIGN
-\*------------------------------------*/
+////
+/// PX-TYPOGRAPHY-DESIGN
+/// Defines styles for typography.
+/// @group px-typography-design
+////
 
-/**
- * Base typographic styles for Predix Experience
- */
+/// @type String [default] - Predix font-family
+$predix-font-family: "GE Inspira Sans", sans-serif !default;
 
 @import "../px-defaults-design/settings.defaults";
 @import "../px-colors-design/settings.colors";
 @import "../px-mixins-design/tools.mixins";
-
-$predix-font-family: "GE Inspira Sans", sans-serif !default;
 
 @if import-once('base.typography') {
 
