--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -7,150 +7,146 @@
 /// @type String [default] - Predix font-family
 $predix-font-family: "GE Inspira Sans", sans-serif !default;
 
-@import "../px-defaults-design/settings.defaults";
-@import "../px-colors-design/settings.colors";
-@import "../px-mixins-design/tools.mixins";
+@import "px-defaults-design/_settings.defaults.scss";
+@import "px-colors-design/_settings.colors.scss";
+@import "px-mixins-design/_tools.mixins.scss";
 
-@if import-once('base.typography') {
+@include font-face('GE Inspira', '../px-typography-design/type/GEInspMd');
+@include font-face('GE Inspira', '../px-typography-design/type/GEInspMdIt', normal, italic);
+@include font-face('GE Inspira', '../px-typography-design/type/GEInspBd', bold, normal);
+@include font-face('GE Inspira', '../px-typography-design/type/GEInspBI', bold, italic);
+@include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-Regular-v01');
+@include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-Italic-v01', normal, italic);
+@include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-Bold-v01', bold, normal);
+@include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-BoldItalic-v01', bold, italic);
+@include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-Regular-v01');
+@include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-Italic-v01', normal, italic);
+@include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-Bold-v01', bold, normal);
+@include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-BoldItalic-v01', bold, italic);
 
-  @include font-face('GE Inspira', '../px-typography-design/type/GEInspMd');
-  @include font-face('GE Inspira', '../px-typography-design/type/GEInspMdIt', normal, italic);
-  @include font-face('GE Inspira', '../px-typography-design/type/GEInspBd', bold, normal);
-  @include font-face('GE Inspira', '../px-typography-design/type/GEInspBI', bold, italic);
-  @include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-Regular-v01');
-  @include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-Italic-v01', normal, italic);
-  @include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-Bold-v01', bold, normal);
-  @include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-BoldItalic-v01', bold, italic);
-  @include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-Regular-v01');
-  @include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-Italic-v01', normal, italic);
-  @include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-Bold-v01', bold, normal);
-  @include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-BoldItalic-v01', bold, italic);
+html {
+  font-family: $predix-font-family;
+}
 
-  html {
-    font-family: $predix-font-family;
-  }
+:host {
+  font-family: $predix-font-family;
+}
 
-  :host {
-    font-family: $predix-font-family;
-  }
+/**
+ * Font weights
+ */
+ 
+.weight--light {
+  font-weight: 300!important;
+}
 
-  /**
-   * Font weights
-   */
-   
-  .weight--light {
-    font-weight: 300!important;
-  }
+.weight--normal {
+  font-weight: 400!important;
+}
 
-  .weight--normal {
-    font-weight: 400!important;
-  }
+.weight--semibold {
+  font-weight: 600!important;
+}
 
-  .weight--semibold {
-    font-weight: 600!important;
+/* Links
+   ========================================================================== */
+
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+
+a {
+  background-color: transparent;
+
+/**
+ * Default link colors
+ */
+ 
+  &:link,
+  &:visited {
+    color: $primary-blue;
   }
   
-  /* Links
-     ========================================================================== */
-  
-  /**
-   * Remove the gray background color from active links in IE 10.
-   */
-  
-  a {
-    background-color: transparent;
-  
-  /**
-   * Default link colors
-   */
-   
-    &:link,
-    &:visited {
-      color: $primary-blue;
-    }
-    
-    &:hover {
-      color: $primary-blue-hover;
-    }
-    
-    &:active {
-      color: $primary-blue-pressed;
-    }
-  
-  /**
-   * Improve readability when focused and also mouse hovered in all browsers.
-   */
-  
-    &:active,
-    &:hover {
-      outline: 0;
-    }
-  
+  &:hover {
+    color: $primary-blue-hover;
   }
   
-  /* Text-level semantics
-     ========================================================================== */
-  
-  /**
-   * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
-   */
-  
-  abbr[title] {
-    border-bottom: 1px dotted;
-  }
-  
-  /**
-   * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
-   */
-  
-  b,
-  strong {
-    font-weight: bold;
-  }
-  
-  /**
-   * Address styling not present in Safari and Chrome.
-   */
-  
-  dfn {
-    font-style: italic;
-  }
-  
-  /**
-   * Address styling not present in IE 8/9.
-   */
-  
-  mark {
-    background: #ff0;
-    color: #000;
-  }
-  
-  /**
-   * Address inconsistent and variable font size in all browsers.
-   */
-  
-  small {
-    font-size: 80%;
-  }
-  
-  /**
-   * Prevent `sub` and `sup` affecting `line-height` in all browsers.
-   */
-  
-  sub,
-  sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-  }
-  
-  sup {
-    top: -0.5em;
-  }
-  
-  sub {
-    bottom: -0.25em;
+  &:active {
+    color: $primary-blue-pressed;
   }
 
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+
+  &:active,
+  &:hover {
+    outline: 0;
+  }
+
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+/**
+ * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+ */
+
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+/**
+ * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
+ */
+
+b,
+strong {
+  font-weight: bold;
+}
+
+/**
+ * Address styling not present in Safari and Chrome.
+ */
+
+dfn {
+  font-style: italic;
+}
+
+/**
+ * Address styling not present in IE 8/9.
+ */
+
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+/**
+ * Address inconsistent and variable font size in all browsers.
+ */
+
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` affecting `line-height` in all browsers.
+ */
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
 }
