--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -7,22 +7,25 @@
 /// @type String [default] - Predix font-family
 $predix-font-family: "GE Inspira Sans", sans-serif !default;
 
+/// @type String [default] - Webfont path
+$inuit-webfont-path: '../px-typography-design/type' !default;
+
 @import "px-defaults-design/_settings.defaults.scss";
 @import "px-colors-design/_settings.colors.scss";
 @import "px-mixins-design/_tools.mixins.scss";
 
-@include font-face('GE Inspira', '../px-typography-design/type/GEInspMd');
-@include font-face('GE Inspira', '../px-typography-design/type/GEInspMdIt', normal, italic);
-@include font-face('GE Inspira', '../px-typography-design/type/GEInspBd', bold, normal);
-@include font-face('GE Inspira', '../px-typography-design/type/GEInspBI', bold, italic);
-@include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-Regular-v01');
-@include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-Italic-v01', normal, italic);
-@include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-Bold-v01', bold, normal);
-@include font-face('GE Inspira Sans', '../px-typography-design/type/GEInspiraSans-BoldItalic-v01', bold, italic);
-@include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-Regular-v01');
-@include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-Italic-v01', normal, italic);
-@include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-Bold-v01', bold, normal);
-@include font-face('GE Inspira Serif', '../px-typography-design/type/GEInspiraSerif-BoldItalic-v01', bold, italic);
+@include font-face('GE Inspira', '#{$inuit-webfont-path}/GEInspMd');
+@include font-face('GE Inspira', '#{$inuit-webfont-path}/GEInspMdIt', normal, italic);
+@include font-face('GE Inspira', '#{$inuit-webfont-path}/GEInspBd', bold, normal);
+@include font-face('GE Inspira', '#{$inuit-webfont-path}/GEInspBI', bold, italic);
+@include font-face('GE Inspira Sans', '#{$inuit-webfont-path}/GEInspiraSans-Regular-v01');
+@include font-face('GE Inspira Sans', '#{$inuit-webfont-path}/GEInspiraSans-Italic-v01', normal, italic);
+@include font-face('GE Inspira Sans', '#{$inuit-webfont-path}/GEInspiraSans-Bold-v01', bold, normal);
+@include font-face('GE Inspira Sans', '#{$inuit-webfont-path}/GEInspiraSans-BoldItalic-v01', bold, italic);
+@include font-face('GE Inspira Serif', '#{$inuit-webfont-path}/GEInspiraSerif-Regular-v01');
+@include font-face('GE Inspira Serif', '#{$inuit-webfont-path}/GEInspiraSerif-Italic-v01', normal, italic);
+@include font-face('GE Inspira Serif', '#{$inuit-webfont-path}/GEInspiraSerif-Bold-v01', bold, normal);
+@include font-face('GE Inspira Serif', '#{$inuit-webfont-path}/GEInspiraSerif-BoldItalic-v01', bold, italic);
 
 html {
   font-family: $predix-font-family;
