Fix cssmin bug that affects Safari and Firefox
cssmin will combine the `html` and `:host` declarations if they are adjacent to one another. Safari and Firefox do not understand `:host` natively, so they will ignore any ruleset that contains a `:host`.

This change makes sure the `html` font-family declaration gets applied in all browsers.

--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -31,10 +31,6 @@ html {
   font-family: $predix-font-family;
 }
 
-:host {
-  font-family: $predix-font-family;
-}
-
 /**
  * Font weights
  */
@@ -49,6 +45,16 @@ html {
 
 .weight--semibold {
   font-weight: 600!important;
+}
+
+/**
+ * the html and :host declarations cannot be adjacent to one other
+ * or cssmin will combine them into a single rule, breaking in
+ * Safari and Firefox.
+ */
+
+:host { 
+  font-family: $predix-font-family;
 }
 
 /* Text-level semantics
