Move too CDN hosted fonts.

--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -7,8 +7,15 @@
 /// @type String [default] - Predix font-family
 $predix-font-family: "GE Inspira Sans", sans-serif !default;
 
+$predix-load-local-fonts: false !default;
+
 /// @type String [default] - Webfont path
-$inuit-webfont-path: '../px-typography-design/type' !default;
+$inuit-webfont-path: '//dzlpbrbc7yvq0.cloudfront.net/predixui/fonts/1.0.0' !default;
+
+@if $predix-load-local-fonts == true {
+  $inuit-webfont-path: '../px-typography-design/type';
+}
+
 
 @import "px-defaults-design/_settings.defaults.scss";
 @import "px-colors-design/_settings.colors.scss";
