--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -10,7 +10,7 @@ $predix-font-family: "GE Inspira Sans", sans-serif !default;
 $predix-load-local-fonts: false !default;
 
 /// @type String [default] - Webfont path
-$inuit-webfont-path: '//dzlpbrbc7yvq0.cloudfront.net/predixui/fonts/1.0.0' !default;
+$inuit-webfont-path: '//dzlpbrbc7yvq0.cloudfront.net/predixdev/fonts/1.0.0' !default;
 
 @if $predix-load-local-fonts == true {
   $inuit-webfont-path: '../px-typography-design/type';
