--- a/sass/px-typography-design-demo.scss
+++ b/sass/px-typography-design-demo.scss
@@ -30,6 +30,7 @@ PAGE. IT SHOULD NOT PROVIDE RULES FOR THE MODULE.
 // Base
 @import "px-flexbox-design/_base.flexbox.scss";
 @import "px-viewport-design/_base.viewport.scss";
+$predix-load-local-fonts : true;
 @import "../_base.typography.scss";
 
 // Component
