Simplified class to only .weight--normal & .weight--bold

--- a/_base.typography.scss
+++ b/_base.typography.scss
@@ -42,15 +42,11 @@ html {
  * Font weights
  */
 
-.weight--light {
-  font-weight: 300!important;
-}
-
 .weight--normal {
   font-weight: 400!important;
 }
 
-.weight--semibold {
+.weight--bold {
   font-weight: 600!important;
 }
 
